<resources>
    <string name="app_name">Testio</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signin">Вхід</string>
    <string name="signup">Реєстрація</string>
    <string name="title">Тема:</string>
    <string name="start">Старт</string>
    <string name="topics">Перелік тем</string>
    <string name="result">Результат</string>
    <string name="number_of_questions">Кількість питань:</string>
    <string name="amount_of_time">Кількість часу:</string>
    <string name="number_of_topic">Номер питання:</string>
    <string name="not_available">Функція не доступна!</string>
    <string name="loading">Завантаження…</string>
    <string name="next">Наступне питання</string>
    <string name="correct_answers">Кількість правильних відповідей:</string>
    <string name="incorrect_answers">Кількість не правильних відповідей:</string>
    <string name="time_used">Витрачено часу:</string>
    <string name="main_menu">Головне меню</string>
    <string name="save">Зберегти</string>
    <string name="choose_topic">Оберіть тему</string>
    <string name="enter_topic">Введіть назву теми</string>
    <string name="enter_question">Введіть питання</string>
    <string name="enter_correct_answer">Введіть правильну відповідь</string>
    <string name="enter_answer">Введіть відповідь</string>
    <string name="add">Додати</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
