<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMain"
        tools:context=".auth.AuthActivity">

    <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@color/formsMain"
            android:padding="18dp"
            android:textColor="@color/formsTextMain"
            android:textColorHint="@color/formsTextMain"
            android:fontFamily="@font/notosans_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/password_et" android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"/>

    <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:background="@color/formsMain"
            android:textColor="@color/formsTextMain"
            android:textColorHint="@color/formsTextMain"
            android:fontFamily="@font/notosans_bold"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_et" android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_btn" android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"/>

    <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:background="@color/buttonColorMain"
            android:textColor="@color/formsTextMain"
            android:fontFamily="@font/notosans_bold"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_et"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:padding="16dp"/>

    <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@color/buttonColorMain"
            android:textColor="@color/formsTextMain"
            android:fontFamily="@font/notosans_bold"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            android:layout_marginBottom="150dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:padding="16dp"/>
    <ImageView
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:src="@mipmap/brain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="53dp"
            android:layout_marginBottom="82dp"
            app:layout_constraintBottom_toTopOf="@+id/email_et"/>

</android.support.constraint.ConstraintLayout>