<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".info.InfoFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundMain">
        <TextView
                android:text="@string/title"
                android:textSize="30sp"
                android:layout_width="114dp"
                android:layout_height="50dp"
                android:id="@+id/textView2"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/buttonStartText"
                android:gravity="center_vertical"
                android:layout_marginStart="36dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
        <TextView
                android:text="TextView"
                android:layout_width="216dp"
                android:layout_height="49dp"
                android:textSize="30sp"
                android:id="@+id/infoTitle_tv"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/buttonStartText"
                android:gravity="center_vertical" app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.6"/>
        <Button
                android:text="@string/start"
                android:textSize="30sp"
                android:background="@color/buttonStart"
                android:textColor="@color/buttonStartText"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:id="@+id/infoButton_btn"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/amountOfTime_tv" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/amount_of_time"
                android:layout_width="114dp"
                android:layout_height="60dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/buttonStartText"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:id="@+id/infoText_tv"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <ImageView
                android:layout_width="418dp"
                android:layout_height="195dp"
                tools:src="@drawable/csharplg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/number_of_questions"
                android:layout_width="114dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/buttonStartText"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:layout_height="66dp"
                android:id="@+id/textView" android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="36dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="TextView"
                android:layout_width="216dp"
                android:layout_height="66dp"
                android:id="@+id/numOfQuestions_tv"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/buttonStartText"
                android:gravity="center_vertical"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/infoTitle_tv" android:layout_marginTop="30dp"
                app:layout_constraintHorizontal_bias="0.619"/>
        <TextView
                android:text="TextView"
                android:layout_width="217dp"
                android:layout_height="66dp"
                android:id="@+id/amountOfTime_tv"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/buttonStartText"
                android:gravity="center_vertical"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.619" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/numOfQuestions_tv"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>